--- a/LSFA/LSFA.tex
+++ b/LSFA/LSFA.tex
@@ -2057,7 +2057,7 @@ The statement of Proposition \ref{prop:GenRightRules} for focused sequent calcul
   \end{displaymath}
   generalizing $\orri^{\LI}$ and $\tr^{\LI}$, are admissible, where
   \\
-  $\impconj{A} = ([(\Gamma'_1 , A_1) , \dots , (\Gamma'_n , A_n)])$ and $\impconj{B} = ([(\Gamma'_1 , B_1) , \dots , (\Gamma'_n , B_n)])$.
+  $\impconj{A} = [(\Gamma'_1 , A_1) , \dots , (\Gamma'_n , A_n)]$ and $\impconj{B} = [(\Gamma'_1 , B_1) , \dots , (\Gamma'_n , B_n)]$.
 \end{proposition}
 % \niccolo{Write the statement of the proposition}
 
