GitHub repo updated

--- a/LSFA/LSFA.tex
+++ b/LSFA/LSFA.tex
@@ -148,7 +148,7 @@ To showcase the modularity of our normalization strategy, in Section \ref{sec:ex
 
 The sequent calculi of Sections \ref{sec:sequent-calculus} and \ref{sec:focusing}, as well as the effective normalization procedure, have been formalized in the Agda proof assistant. The code is freely available at
 %\begin{center}
-  \url{https://github.com/cswphilo/FormalizationSKewMonCloCat}.
+  \url{https://github.com/cswphilo/SkewMonAdd}.
 %\end{center}
 %We briefly comment on some of the design choices and reflect on the formalization experience in Section \ref{sec:formalization}. 
 
